--- a/src/index.html
+++ b/src/index.html
@@ -437,7 +437,7 @@
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
-    
+
             <div class="price__wrapper">
                 <div class="price__item">
                     <div class="price__type">Landing-page</div>
@@ -481,6 +481,53 @@
                         Создам дизайн для вашего сайта/приложения...
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="photo">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fz16 about__title">Контакты</h2>
+                    <div class="title title_fz36 about__subtitle">Свяжитесь со мной</div>
+                    <div class="divider"></div>
+                    <p class="title title_fz14 contacts__text">Любым удобным для вас способом:</p>
+                    <div class="contacts__social">
+                        <a href="" class="contacts__link">
+                            <img src="icons/social/facebook.svg" alt="">
+                        </a>
+                        <a href="" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="">
+                        </a>
+                        <a href="" class="contacts__link">
+                            <img src="icons/social/instagram.svg" alt="">
+                        </a>
+
+                    </div>
+                    <p class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</p>
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input name="imya" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input name="emails" id="email" type="email">
+                            <label for="email">Ваша почта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="texta" id="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+
+                        <button class="btn contacts__btn">Отправить сообщение</button>
+
+                    </form>
+                </div>
+
             </div>
         </div>
     </section>
