--- a/src/index.html
+++ b/src/index.html
@@ -511,11 +511,11 @@
                     <p class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</p>
                     <form action="#" class="contacts__form">
                         <div class="contacts__input">
-                            <input name="imya" id="name" type="text">
+                            <input required name="imya" id="name" type="text">
                             <label for="name">Ваше имя</label>
                         </div>
                         <div class="contacts__input">
-                            <input name="emails" id="email" type="email">
+                            <input required name="emails" id="email" type="email">
                             <label for="email">Ваша почта</label>
                         </div>
                         <div class="contacts__textarea">
@@ -523,7 +523,13 @@
                             <label for="text">Ваше сообщение</label>
                         </div>
 
-                        <button class="btn contacts__btn">Отправить сообщение</button>
+                        <div class="contacts__triggers">
+                            <button class="btn contacts__btn">Отправить сообщение</button>
+                            <div class="contacts__policy">
+                                <input required type="checkbox">
+                                <span>Я согласен(а) с <a href="policy.html">политикой конфиденциальности</a></span>
+                            </div>
+                        </div>
 
                     </form>
                 </div>
