--- a/src/index.html
+++ b/src/index.html
@@ -404,7 +404,8 @@
             </div>
         </div>
     </section>
-    <section class="portfolio">
+
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 portfolio__title">Навыки</h2>
             <div class="title title_fz36 portfolio__subtitle">Что я использую в работе</div>
@@ -431,9 +432,9 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
 
-    <section class="price">
+    <!-- <section class="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -483,9 +484,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -536,7 +537,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
 
     <script src="js/script.js"></script>
 </body>
